<resources>
    <string name="app_name">TeaTime</string>
    <string name="Tea">Tea</string>
    <string name="title_activity_add_tea">Add New Tea</string>
    <string name="first_steep_time">First Steep Time</string>
    <string name="second_steep_time">Second Steep Time</string>

    <!-- Temperatures -->
    <string name="min_Temp">Min Temp (F)</string>
    <string name="max_Temp">Max Temp (F)</string>
    <string name="min_Temp_Cent">Min Temp (C)</string>
    <string name="max_Temp_Cent">Max Temp (C)</string>

    <string name="OK">OK</string>
    <string name="Alert1">Enter More Information</string>
    <string name="FirstSteep">Steep Time (1st)</string>
    <string name="SecondSteep">Steep Time (2nd)</string>
    <string name="SteepError">There\'s No Tea That Brews Instantly. Try Again</string>
    <string name="GeneralInfoError">Please Enter All Required Information</string>
    <string name="Brew">Brew Tea</string>
    <string name="Edit">Edit Tea Information</string>
    <string name="Delete">Delete Entry</string>
    <string name="TeaReady">Your Tea is Ready to Drink! Enjoy!</string>
    <string name="EditTea">Editing Tea Information</string>
    <string name="Basics">Basics</string>
    <string name="DetailedInfo">Tasting Notes</string>
    <string name="ImperialStrength">oz. per cup water</string>
    <string name="MetricStength">g/100mL water</string>
    <string name="InStock">In Stock</string>

    <!-- Sorting Methods -->
    <string name="SortBy">Sort By:</string>
    <string name="SortByVerbose">Database Sorting Criteria</string>
    <string name="Type">Type</string>
    <string name="NameAZ">Name A-Z</string>
    <string name="NameZA">Name Z-A</string>
    <string name="MostRecentlyAdded">Most Recently Added</string>
    <string name="LeastRecentlyAdded">First Added</string>

    <!-- Strings Present on the Settings Screen -->
    <string name="Settings">Settings</string>
    <string name="Vibrate">Vibrate Mode</string>
    <string name="Ferinheit">Fahrenheit</string>
    <string name="Celsius">Celsius</string>
    <string name="Temperature">Temp. Scale</string>
    <string name="StrengthMeasurements">Strength Measurements</string>

    <!-- Tea Variates -->
    <string name="Black">Black</string>
    <string name="Green">Green</string>
    <string name="White">White</string>
    <string name="Oolong">Oolong</string>
    <string name="Puerh">Puerh</string>
    <string name="Yellow">Yellow</string>
    <string name="Herbal">Herbal</string>

    <!-- Some Things to include in emails to the developer -->
    <string name="devEmail">12mp81@queensu.ca</string>
    <string name="defaultSubject">TEA TIME ISSUE: [Insert Issue Here]</string>
    <string name="defaultBody">[Politely and thoroughly describe your issue here]</string>
    <string name="emailChooserTitle">Select Your Preferred Email Client!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="BrewBetween">Brewing Range:</string>

    <string name="Enjoy">Ready to Enjoy?</string>
    <string name="Strength">For Perfect Strength:</string>
    <string name="ImperialIdeal">oz. tea per cup</string>
    <string name="MetricIdeal">grams tea per 100 mL.</string>


    <string name="DataBaseError">An Error Occurred Reading Updated Entry from Database.</string>

    <!-- Strings to Display when the User Wishes to Remove a Tea Object -->
    <string name="DeletionAffirmation">Are You Sure You Wish to Remove this Tea from your App?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <!-- Uncategorised Strings -->
    <string name="Cancel">Stop Timer</string>

</resources>
