<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sortByOption"
        android:title="@string/SortBy">

        <menu>
            <item
                android:id="@+id/TypeSort"
                android:title="@string/Type"></item>
            <item
                android:id="@+id/AtoZSort"
                android:title="@string/NameAZ"></item>
            <item
                android:id="@+id/ZtoASort"
                android:title="@string/NameZA"></item>
            <item
                android:id="@+id/newestFirst"
                android:title="@string/MostRecentlyAdded"></item>
            <item
                android:id="@+id/oldestFirst"
                android:title="@string/LeastRecentlyAdded"></item>
        </menu>

    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/Settings" />
    <item
        android:id="@+id/submitFeedback"
        android:title="Submit Feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/addTeaChoice"
        android:checkable="true"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:title="AddItem"
        android:visible="true"
        app:showAsAction="always" />
</menu>